travelRecommendation/css/travel_recommendation.css
body{
  margin: 0;
  padding: 0;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-image: url(../data/bg.avif);
  background-size: 100% auto;
  color: aliceblue;
}

/* navigation bar */
nav{
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #1e2a30;
  padding: 1rem 2rem;
}

nav h2{
  font-size: 1.5rem;
}

nav ul{
  list-style-type: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

nav ul li{
  display: inline;
  font-weight: 500;
}

nav a{
  text-decoration: none;
  color: aliceblue;
  font-weight: 500;
}

nav input[type="text"]{
  padding: 0.4rem 0.6rem;
  border-radius: 5px;
  border: none;
}

nav button{
  padding: 0.4rem 0.6rem;
  border-radius: 5px;
  border: none;
  background-color: #00aaff;
  color: aliceblue;
  cursor: pointer;
}

/* main page layout */
.main-container{
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 2rem 0 2rem;
}

/* home page */
#main-heading{
  max-width: 500px;
  font-size: 3rem;
  font-weight: bold;
  text-align: left;
  /* padding: 2rem 2rem 0 2rem; */
}

#home-description{
  max-width: 500px;
  font-size: 1rem;
  margin-top: 1rem;
  line-height: 1.5;
}

#bookBtn{
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  background-color: #00aaff;
  border: none;
  border-radius: 8px;
  cursor: pointer;
}

/* result searches */
#result{
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 1.5rem;
  padding: 2rem;
  padding-right: 10rem;
}

.result-rectangle{
  background-color: transparent;
  border-radius: 15px;
  width: 300px;
  overflow: hidden;
  transition: transform 0.2s;
}

.result-rectangle:hover{
  transform: scale(1.05);
}

.result-rectangle img{
  width: 100%;
  height: 170px;
  object-fit: cover;
  border-radius: 15px;
}

.result-rectangle p{
 line-height: 1.3;
}

/* social media icons from home page */
#social-media{
  display: flex;
  justify-content: left;
  gap: 1rem;
  padding: 2rem;
}


#social-media li {
  list-style-type: none;
  transition: transform 0.2s;
}

#social-media li:hover{
  transform: scale(1.05);
  cursor: pointer;
  color: blanchedalmond;
}

/* about us page */
#about-description{
  max-width: 500px;
}

#team{
  margin-top: 5rem;
}

#team-members{
  max-width: 600px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}

/* contact us page */

#contact-container{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 3rem;
  max-width: 600px;
  padding-top: 3rem;
}

#contact-right input,
#contact-right textarea {
  background-color: rgba(255, 255, 255, 0.4); /* white with 40% opacity */
  border: 1px solid #ccc;
  padding: 0.5rem;
  margin-top: 0.5rem;
  width: 100%;
  border-radius: 6px;
  font-size: 1rem;
  color: #333;
}

/* 
 padding: 0.75rem 1.5rem;
  font-size: 1rem;
  background-color: #00aaff;
  border: none;
  border-radius: 8px;
  cursor: pointer;
*/

#contact-right button{
  padding: 0.75rem 1.5rem;
  font-size: 0.9rem;
  background-color: rgba(255, 255, 255, 0.4); /* white with 40% opacity */
  border: none;
  border-radius: 8px;
  cursor: pointer;  
}

